ANTLRoutput/MyGrammarParser.py
# Generated from MyGrammar.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MyGrammarParser ( Parser ):

    grammarFileName = "MyGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'char'", "'const'", 
                     "'void'", "'#include <stdio.h>'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "','", "<INVALID>", "<INVALID>", 
                     "'='", "'printf'", "'scanf'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'++'", "'--'", "'+'", "'-'", 
                     "'/'", "'!'", "'%'", "'*'", "'&'", "<INVALID>", "<INVALID>", 
                     "'if'", "'else'", "'while'", "'for'", "'break'", "'continue'", 
                     "'return'" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "CHAR", "CONST", "VOID", 
                      "INCLUDE", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "LEFT_SQUARE", "RIGHT_SQUARE", "SEMICOLON", 
                      "COMMA", "STRING", "CHAR_STR", "ASSIGNMENT", "PRINTF", 
                      "SCANF", "EQUAL", "N_EQUAL", "LESS", "LESS_EQUAL", 
                      "GREATER", "GREATER_EQUAL", "INCR", "DECR", "PLUS", 
                      "MIN", "DIV", "NOT", "MOD", "MULT", "AMPERSAND", "OR", 
                      "AND", "IF", "ELSE", "WHILE", "FOR", "BREAK", "CONTINUE", 
                      "RETURN", "ID", "INT_CONSTANT", "FLOAT_CONSTANT", 
                      "MULTI_COMMENT", "SINGLE_COMMENT", "WS" ]

    RULE_mainprogram = 0
    RULE_startrule = 1
    RULE_operations = 2
    RULE_function = 3
    RULE_parameter_list = 4
    RULE_fct_scope = 5
    RULE_parameter = 6
    RULE_fct_call = 7
    RULE_statement = 8
    RULE_if_statement = 9
    RULE_while_loop = 10
    RULE_for_loop = 11
    RULE_terminate_statement = 12
    RULE_condition = 13
    RULE_increment = 14
    RULE_for_condition = 15
    RULE_scope = 16
    RULE_declaration = 17
    RULE_assignment_statement = 18
    RULE_declaration_specifier = 19
    RULE_type_specifier = 20
    RULE_pointer_operator = 21
    RULE_assignment_expr = 22
    RULE_and_expr = 23
    RULE_or_expr = 24
    RULE_comp_expr = 25
    RULE_add_expr = 26
    RULE_mult_expr = 27
    RULE_factor_fct_call = 28
    RULE_factor = 29
    RULE_array_initialize = 30
    RULE_comp_operator = 31
    RULE_id_operators = 32
    RULE_add_operator = 33
    RULE_mult_operator = 34
    RULE_constant = 35
    RULE_identifier = 36

    ruleNames =  [ "mainprogram", "startrule", "operations", "function", 
                   "parameter_list", "fct_scope", "parameter", "fct_call", 
                   "statement", "if_statement", "while_loop", "for_loop", 
                   "terminate_statement", "condition", "increment", "for_condition", 
                   "scope", "declaration", "assignment_statement", "declaration_specifier", 
                   "type_specifier", "pointer_operator", "assignment_expr", 
                   "and_expr", "or_expr", "comp_expr", "add_expr", "mult_expr", 
                   "factor_fct_call", "factor", "array_initialize", "comp_operator", 
                   "id_operators", "add_operator", "mult_operator", "constant", 
                   "identifier" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    CHAR=3
    CONST=4
    VOID=5
    INCLUDE=6
    LEFT_PAREN=7
    RIGHT_PAREN=8
    LEFT_BRACKET=9
    RIGHT_BRACKET=10
    LEFT_SQUARE=11
    RIGHT_SQUARE=12
    SEMICOLON=13
    COMMA=14
    STRING=15
    CHAR_STR=16
    ASSIGNMENT=17
    PRINTF=18
    SCANF=19
    EQUAL=20
    N_EQUAL=21
    LESS=22
    LESS_EQUAL=23
    GREATER=24
    GREATER_EQUAL=25
    INCR=26
    DECR=27
    PLUS=28
    MIN=29
    DIV=30
    NOT=31
    MOD=32
    MULT=33
    AMPERSAND=34
    OR=35
    AND=36
    IF=37
    ELSE=38
    WHILE=39
    FOR=40
    BREAK=41
    CONTINUE=42
    RETURN=43
    ID=44
    INT_CONSTANT=45
    FLOAT_CONSTANT=46
    MULTI_COMMENT=47
    SINGLE_COMMENT=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainprogramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MyGrammarParser.EOF, 0)

        def INCLUDE(self):
            return self.getToken(MyGrammarParser.INCLUDE, 0)

        def startrule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.StartruleContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.StartruleContext,i)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_mainprogram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainprogram" ):
                listener.enterMainprogram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainprogram" ):
                listener.exitMainprogram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainprogram" ):
                return visitor.visitMainprogram(self)
            else:
                return visitor.visitChildren(self)




    def mainprogram(self):

        localctx = MyGrammarParser.MainprogramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mainprogram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MyGrammarParser.INCLUDE:
                self.state = 74
                self.match(MyGrammarParser.INCLUDE)


            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.startrule()
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MyGrammarParser.INT) | (1 << MyGrammarParser.FLOAT) | (1 << MyGrammarParser.CHAR) | (1 << MyGrammarParser.CONST) | (1 << MyGrammarParser.VOID) | (1 << MyGrammarParser.LEFT_PAREN) | (1 << MyGrammarParser.STRING) | (1 << MyGrammarParser.CHAR_STR) | (1 << MyGrammarParser.INCR) | (1 << MyGrammarParser.DECR) | (1 << MyGrammarParser.PLUS) | (1 << MyGrammarParser.MIN) | (1 << MyGrammarParser.NOT) | (1 << MyGrammarParser.MULT) | (1 << MyGrammarParser.AMPERSAND) | (1 << MyGrammarParser.ID) | (1 << MyGrammarParser.INT_CONSTANT) | (1 << MyGrammarParser.FLOAT_CONSTANT))) != 0)):
                    break

            self.state = 82
            self.match(MyGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartruleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operations(self):
            return self.getTypedRuleContext(MyGrammarParser.OperationsContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_startrule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartrule" ):
                listener.enterStartrule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartrule" ):
                listener.exitStartrule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartrule" ):
                return visitor.visitStartrule(self)
            else:
                return visitor.visitChildren(self)




    def startrule(self):

        localctx = MyGrammarParser.StartruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_startrule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.operations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MyGrammarParser.DeclarationContext,0)


        def SEMICOLON(self):
            return self.getToken(MyGrammarParser.SEMICOLON, 0)

        def assignment_statement(self):
            return self.getTypedRuleContext(MyGrammarParser.Assignment_statementContext,0)


        def function(self):
            return self.getTypedRuleContext(MyGrammarParser.FunctionContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_operations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperations" ):
                listener.enterOperations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperations" ):
                listener.exitOperations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperations" ):
                return visitor.visitOperations(self)
            else:
                return visitor.visitChildren(self)




    def operations(self):

        localctx = MyGrammarParser.OperationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_operations)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.declaration()
                self.state = 87
                self.match(MyGrammarParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.assignment_statement()
                self.state = 90
                self.match(MyGrammarParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.function()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyGrammarParser.ID, 0)

        def LEFT_PAREN(self):
            return self.getToken(MyGrammarParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(MyGrammarParser.RIGHT_PAREN, 0)

        def declaration_specifier(self):
            return self.getTypedRuleContext(MyGrammarParser.Declaration_specifierContext,0)


        def VOID(self):
            return self.getToken(MyGrammarParser.VOID, 0)

        def fct_scope(self):
            return self.getTypedRuleContext(MyGrammarParser.Fct_scopeContext,0)


        def SEMICOLON(self):
            return self.getToken(MyGrammarParser.SEMICOLON, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(MyGrammarParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = MyGrammarParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyGrammarParser.INT, MyGrammarParser.FLOAT, MyGrammarParser.CHAR, MyGrammarParser.CONST]:
                self.state = 95
                self.declaration_specifier()
                pass
            elif token in [MyGrammarParser.VOID]:
                self.state = 96
                self.match(MyGrammarParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 99
            self.match(MyGrammarParser.ID)
            self.state = 100
            self.match(MyGrammarParser.LEFT_PAREN)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MyGrammarParser.INT) | (1 << MyGrammarParser.FLOAT) | (1 << MyGrammarParser.CHAR) | (1 << MyGrammarParser.CONST))) != 0):
                self.state = 101
                self.parameter_list()


            self.state = 104
            self.match(MyGrammarParser.RIGHT_PAREN)
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyGrammarParser.LEFT_BRACKET]:
                self.state = 105
                self.fct_scope()
                pass
            elif token in [MyGrammarParser.SEMICOLON]:
                self.state = 106
                self.match(MyGrammarParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COMMA)
            else:
                return self.getToken(MyGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = MyGrammarParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.parameter()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MyGrammarParser.COMMA:
                self.state = 110
                self.match(MyGrammarParser.COMMA)
                self.state = 111
                self.parameter()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fct_scopeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACKET(self):
            return self.getToken(MyGrammarParser.LEFT_BRACKET, 0)

        def RIGHT_BRACKET(self):
            return self.getToken(MyGrammarParser.RIGHT_BRACKET, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.StatementContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.DeclarationContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.SEMICOLON)
            else:
                return self.getToken(MyGrammarParser.SEMICOLON, i)

        def fct_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.Fct_callContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.Fct_callContext,i)


        def assignment_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.Assignment_statementContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.Assignment_statementContext,i)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_fct_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFct_scope" ):
                listener.enterFct_scope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFct_scope" ):
                listener.exitFct_scope(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFct_scope" ):
                return visitor.visitFct_scope(self)
            else:
                return visitor.visitChildren(self)




    def fct_scope(self):

        localctx = MyGrammarParser.Fct_scopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fct_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MyGrammarParser.LEFT_BRACKET)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MyGrammarParser.INT) | (1 << MyGrammarParser.FLOAT) | (1 << MyGrammarParser.CHAR) | (1 << MyGrammarParser.CONST) | (1 << MyGrammarParser.LEFT_PAREN) | (1 << MyGrammarParser.STRING) | (1 << MyGrammarParser.CHAR_STR) | (1 << MyGrammarParser.PRINTF) | (1 << MyGrammarParser.SCANF) | (1 << MyGrammarParser.INCR) | (1 << MyGrammarParser.DECR) | (1 << MyGrammarParser.PLUS) | (1 << MyGrammarParser.MIN) | (1 << MyGrammarParser.NOT) | (1 << MyGrammarParser.MULT) | (1 << MyGrammarParser.AMPERSAND) | (1 << MyGrammarParser.IF) | (1 << MyGrammarParser.WHILE) | (1 << MyGrammarParser.FOR) | (1 << MyGrammarParser.BREAK) | (1 << MyGrammarParser.CONTINUE) | (1 << MyGrammarParser.RETURN) | (1 << MyGrammarParser.ID) | (1 << MyGrammarParser.INT_CONSTANT) | (1 << MyGrammarParser.FLOAT_CONSTANT))) != 0):
                self.state = 128
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 118
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 119
                    self.declaration()
                    self.state = 120
                    self.match(MyGrammarParser.SEMICOLON)
                    pass

                elif la_ == 3:
                    self.state = 122
                    self.fct_call()
                    self.state = 123
                    self.match(MyGrammarParser.SEMICOLON)
                    pass

                elif la_ == 4:
                    self.state = 125
                    self.assignment_statement()
                    self.state = 126
                    self.match(MyGrammarParser.SEMICOLON)
                    pass


                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(MyGrammarParser.RIGHT_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_specifier(self):
            return self.getTypedRuleContext(MyGrammarParser.Declaration_specifierContext,0)


        def ID(self):
            return self.getToken(MyGrammarParser.ID, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MyGrammarParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.declaration_specifier()
            self.state = 136
            self.match(MyGrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fct_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINTF(self):
            return self.getToken(MyGrammarParser.PRINTF, 0)

        def LEFT_PAREN(self):
            return self.getToken(MyGrammarParser.LEFT_PAREN, 0)

        def STRING(self):
            return self.getToken(MyGrammarParser.STRING, 0)

        def RIGHT_PAREN(self):
            return self.getToken(MyGrammarParser.RIGHT_PAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COMMA)
            else:
                return self.getToken(MyGrammarParser.COMMA, i)

        def assignment_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.Assignment_exprContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.Assignment_exprContext,i)


        def SCANF(self):
            return self.getToken(MyGrammarParser.SCANF, 0)

        def AMPERSAND(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.AMPERSAND)
            else:
                return self.getToken(MyGrammarParser.AMPERSAND, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.ID)
            else:
                return self.getToken(MyGrammarParser.ID, i)

        def factor_fct_call(self):
            return self.getTypedRuleContext(MyGrammarParser.Factor_fct_callContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_fct_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFct_call" ):
                listener.enterFct_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFct_call" ):
                listener.exitFct_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFct_call" ):
                return visitor.visitFct_call(self)
            else:
                return visitor.visitChildren(self)




    def fct_call(self):

        localctx = MyGrammarParser.Fct_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fct_call)
        self._la = 0 # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyGrammarParser.PRINTF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(MyGrammarParser.PRINTF)
                self.state = 139
                self.match(MyGrammarParser.LEFT_PAREN)
                self.state = 140
                self.match(MyGrammarParser.STRING)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MyGrammarParser.COMMA:
                    self.state = 143 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 141
                        self.match(MyGrammarParser.COMMA)
                        self.state = 142
                        self.assignment_expr()
                        self.state = 145 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==MyGrammarParser.COMMA):
                            break



                self.state = 149
                self.match(MyGrammarParser.RIGHT_PAREN)
                pass
            elif token in [MyGrammarParser.SCANF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(MyGrammarParser.SCANF)
                self.state = 151
                self.match(MyGrammarParser.LEFT_PAREN)
                self.state = 152
                self.match(MyGrammarParser.STRING)
                self.state = 156 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 153
                    self.match(MyGrammarParser.COMMA)
                    self.state = 154
                    self.match(MyGrammarParser.AMPERSAND)
                    self.state = 155
                    self.match(MyGrammarParser.ID)
                    self.state = 158 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==MyGrammarParser.COMMA):
                        break

                self.state = 160
                self.match(MyGrammarParser.RIGHT_PAREN)
                pass
            elif token in [MyGrammarParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.factor_fct_call()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(MyGrammarParser.If_statementContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(MyGrammarParser.While_loopContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(MyGrammarParser.For_loopContext,0)


        def terminate_statement(self):
            return self.getTypedRuleContext(MyGrammarParser.Terminate_statementContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):
